# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  tmp_output
config/: sphere.yaml
include/raytracer/: camera.h  colors.h  geometry.h  lights.h  raytracer.h  scene.h  utils.h
scripts/: build.sh  debug.sh  run.sh  run_only.sh  setup.sh
src/: camera.cpp  colors.cpp  geometery.cpp  lights.cpp  main.cpp  raytracer.cpp  scene.cpp
